Gradle 5.0
- Add `org.jenkins-ci.main:jenkins-core` to `annotationProcessor` if
  running on Gradle 4.6 or higher. Gradle 4.6 first introduced the
  `annotationProcessor` configuration[1]. As of Gradle 5.0, annotation
  processors are no longer run from the compile configuration. The
  Jenkins core annotation processor is needed to generate the
  `META-INF/services/hudson.Plugin` file.
- Remove IMPROVED_POM_SUPPORT feature flag - on by default now.
- Remove STABLE_PUBLISHING feature flag - on by default now.
- Drop pipeline support for Java 7. Gradle 5.0 requires >= Java 8.
- Update sourceCompatibility and targetCompatibility from 1.7 to 1.8

Release notes: https://docs.gradle.org/5.0/release-notes.html

[1]: https://docs.gradle.org/4.6/release-notes.html#convenient-declaration-of-annotation-processor-dependencies